--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,10 @@
 [mypy]
 python_version = 3.6
 ignore_missing_imports = True
+
+
+[mypy-docpublisher.protos.*]
+ignore_errors = True
+
+[mypy-google.protobuf.*]
+ignore_errors = True
