--- a/mypy.ini
+++ b/mypy.ini
@@ -3,7 +3,7 @@ python_version = 3.6
 ignore_missing_imports = True
 
 
-[mypy-docpublisher.protos.*]
+[mypy-docuploader.protos.*]
 ignore_errors = True
 
 [mypy-google.protobuf.*]
