Correct path to trampoline build file

--- a/.kokoro/common.cfg
+++ b/.kokoro/common.cfg
@@ -15,5 +15,5 @@ env_vars: {
 # Tell the trampoline which build file to use.
 env_vars: {
     key: "TRAMPOLINE_BUILD_FILE"
-    value: "git/docuploader/.kokoro/build.sh"
+    value: "github/docuploader/.kokoro/build.sh"
 }
