--- a/.kokoro/release.cfg
+++ b/.kokoro/release.cfg
@@ -16,5 +16,5 @@ before_action {
 
 env_vars: {
     key: "TRAMPOLINE_BUILD_FILE"
-    value: "git/docuploader/.kokoro/release.sh"
+    value: "github/docuploader/.kokoro/release.sh"
 }
