--- a/.kokoro/continuous/common.cfg
+++ b/.kokoro/continuous/common.cfg
@@ -1,7 +1,17 @@
 # Format: //devtools/kokoro/config/proto/build.proto
 
+# Build logs will be here
+action {
+  define_artifacts {
+    regex: "**/*sponge_log.xml"
+  }
+}
+
 # Download trampoline resources.
 gfile_resources: "/bigstore/cloud-devrel-kokoro-resources/trampoline"
+
+# Download resources for system tests (service account key, etc.)
+gfile_resources: "/bigstore/cloud-devrel-kokoro-resources/google-cloud-python"
 
 # Use the trampoline script to run in docker.
 build_file: "docuploader/.kokoro/trampoline.sh"
@@ -9,10 +19,8 @@ build_file: "docuploader/.kokoro/trampoline.sh"
 # Configure the docker image for kokoro-trampoline.
 env_vars: {
     key: "TRAMPOLINE_IMAGE"
-    value: "gcr.io/cloud-devrel-kokoro-resources/python"
+    value: "gcr.io/cloud-devrel-kokoro-resources/python-multi"
 }
-
-# Tell the trampoline which build file to use.
 env_vars: {
     key: "TRAMPOLINE_BUILD_FILE"
     value: "github/docuploader/.kokoro/build.sh"
